--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main class="container">
-      <h2>Gerador de Senhas Fortes</h2>
+      <h2>Gerador de Senhas Fortes 2</h2>
       <form action="">
         <div class="generator">
           <input id="password" type="text" value="{{ message }}" />
