--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Password Generator:</title>
+    <title>Password Generator</title>
+    <link rel="shortcut icon" href="/static/kisspng-black-white-dice-bunco-clip-art-dice-images-free-5a85bd453e38a9.6267137615187141812549.png">
     <script src="https://kit.fontawesome.com/1ab94d0eba.js" crossorigin="anonymous";></script>
     <script src="/static/js/main.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}" />
@@ -10,35 +11,48 @@
   </head>
   <body>
     <main class="container">
-      <h2>Gerador de Senhas Fortes</h2>
-      <form action="">
-        <div class="generator">
-          <input id="password" type="text" value="{{ message }}" />
-          <div class="underline"></div>
-        </div>
 
-        <input type="submit" href="#" value="Gerar" />
-      </form>
-
-      <div class="footer">
-        <div class="elements">
-          <div class="elements copy">
-            
-            <button type="button" onclick="copyClipBoard();">
-                <i class="fas fa-copy"></i>
-                Copiar senha
-              </button>
+        <h2>Gerador de Senhas Fortes</h2>
+        <form action="">
+          <div class="generator">
+            <input id="password" type="text" value="{{ message }}" />
+            <div class="underline"></div>
+          </div>
+  
+          <input type="submit" href="#" value="Gerar" />
+        </form>
+  
+        <div class="footer">
+          <div class="elements">
+            <div class="elements copy">
               
-            
-          </div>
-          <div class="elements unlock">
-            <button type="button" onclick="hydePass();">
-              <i class="fas fa-unlock-alt"></i>
-              Ocultar senha
-            </a>
+              <button type="button" onclick="copyClipBoard();">
+                  <i class="fas fa-copy"></i>
+                  Copiar senha
+                </button>
+                
+              
+            </div>
+            <div class="elements unlock">
+              <button type="button" onclick="hydePass();">
+                <i class="fas fa-unlock-alt"></i>
+                Ocultar senha
+              </a>
+            </div>
           </div>
         </div>
-      </div>
+
+        <div class="info">
+
+          <h3><i class="fas fa-dice"></i> Diceware Password</h3><br>
+          <p>Criada por <b>Arnold Reinhold</b> em 1995, o método Diceware utiliza de conceitos de estatisticas como aleatoriedade, usando dados e uma lista de palavras para construir passphrases praticamente "inquebráveis". Usando a ideia de usar 6 palavras separadas por espaço, a construção dessas senhas se tornam extremamente simples, mas com uma dificuldade de até 27 milhões de anos pra adivinhar uma senha usando 1 trilhão de tentativas por segundo.</p>
+
+        </div>
+
+        <div class="autor">
+          <p> <i class="far fa-copyright"></i> Autores:     Victor Lima / Igor Lima</p>
+        </div>
+     
     </main>
   </body>
 </html>
