--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Password Generator</title>
-    <link rel="shortcut icon" href="/static/kisspng-black-white-dice-bunco-clip-art-dice-images-free-5a85bd453e38a9.6267137615187141812549.png">
+    <link rel="shortcut icon" href="..//static/diceimg.png">
     <script src="https://kit.fontawesome.com/1ab94d0eba.js" crossorigin="anonymous";></script>
     <script src="/static/js/main.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}" />
@@ -45,12 +45,17 @@
         <div class="info">
 
           <h3><i class="fas fa-dice"></i> Diceware Password</h3><br>
-          <p>Criada por <b>Arnold Reinhold</b> em 1995, o método Diceware utiliza de conceitos de estatisticas como aleatoriedade, usando dados e uma lista de palavras para construir passphrases praticamente "inquebráveis". Usando a ideia de usar 6 palavras separadas por espaço, a construção dessas senhas se tornam extremamente simples, mas com uma dificuldade de até 27 milhões de anos pra adivinhar uma senha usando 1 trilhão de tentativas por segundo.</p>
+          <p>Criada por <b>Arnold Reinhold</b> em 1995, o método Diceware utiliza de conceitos de estatisticas como aleatoriedade, usando dados e uma lista de palavras para construir frases praticamente "inquebráveis".<br><br> Usando a ideia de usar 6 palavras separadas por espaço, a construção dessas senhas se tornam extremamente simples, mas com uma dificuldade de até 27 milhões de anos pra adivinhar uma senha usando 1 trilhão de tentativas por segundo.</p>
 
         </div>
 
         <div class="autor">
-          <p> <i class="far fa-copyright"></i> Autores:    Victor Lima / Igor Lima</p>
+          <p> <i id="c" class="far fa-copyright"></i> Authors <br><br></p>
+          <div class="social">
+            <a href="https://www.linkedin.com/in/igor-rocha-lima/"><i class="fab fa-linkedin"></i></a> <a href="https://github.com/eaiigor"><i class="fab fa-github"></i></a>  Igor Lima <br>
+            <a href="https://www.linkedin.com/in/victorlimasec/"><i class="fab fa-linkedin"></i></a> <a href="https://github.com/V1ctorLima"><i class="fab fa-github"></i></a>  Victor Lima  
+          </div>
+          
         </div>
      
     </main>
