--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Password Generator</title>
-    <link rel="shortcut icon" href="..//static/diceimg.png">
+    <link rel="shortcut icon" href="../static/diceimg.png">
     <script src="https://kit.fontawesome.com/1ab94d0eba.js" crossorigin="anonymous";></script>
     <script src="/static/js/main.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}" />
@@ -15,11 +15,13 @@
         <h2>Gerador de Senhas Fortes</h2>
         <form action="">
           <div class="generator">
-            <input id="password" type="text" value="{{ message }}" />
+            <input id="password" type="text" value="Clique em Gerar para obter sua senha"/>
             <div class="underline"></div>
           </div>
-  
-          <input type="submit" href="#" value="Gerar" />
+          <div id="result"></div>
+          <button type="button" onclick="getNewPass();">
+          Gerar
+          </button>
         </form>
   
         <div class="footer">
@@ -45,7 +47,7 @@
         <div class="info">
 
           <h3><i class="fas fa-dice"></i> Diceware Password</h3><br>
-          <p>Criada por <b>Arnold Reinhold</b> em 1995, o método Diceware utiliza de conceitos de estatisticas como aleatoriedade, usando dados e uma lista de palavras para construir frases praticamente "inquebráveis".<br><br> Usando a ideia de usar 6 palavras separadas por espaço, a construção dessas senhas se tornam extremamente simples, mas com uma dificuldade de até 27 milhões de anos pra adivinhar uma senha usando 1 trilhão de tentativas por segundo.</p>
+          <p>Criada por <b>Arnold Reinhold</b> em 1995, o método Diceware utiliza de conceitos estatisticos como aleatoriedade, usando dados e uma lista de palavras para construir frases praticamente "inquebráveis".<br><br> Com a ideia de usar 6 palavras separadas por espaço, a construção dessas senhas se torna extremamente simples, mas com uma dificuldade de até 27 milhões de anos pra adivinhar uma senha usando 1 trilhão de tentativas por segundo.</p>
 
         </div>
 
